tests/errors/test_77.xpp
// Cannot access private global var via import access

import "foo" as foo;

fn main() void {
	let x = foo::private;
}
